Kubernetes/Headlamp/yamls/ig-headlamp.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitoring-headlamp-security
  namespace: kube-system
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-headlamp-websecure
  namespace: kube-system
  annotations:
    gethomepage.dev/href: "https://headlamp.domain.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "Headlamp Dashboard"
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: headlamp-dark.svg
    gethomepage.dev/app: headlamp # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: "Headlamp"
    #gethomepage.dev/showStats: "true"
    #gethomepage.dev/widget.type: "emby"
    #gethomepage.dev/widget.url: "https://emby.example.com"
    #gethomepage.dev/pod-selector: ""
    #gethomepage.dev/weight: 10 # optional
    #gethomepage.dev/instance: "public" # optional
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`headlamp.domain.com`)
      services:
      - name: headlamp
        port: 80
        serversTransport: monitoring-headlamp-transport
      middlewares:
        - name: monitoring-headlamp-security
  tls:
    secretName: headlamp-domain-com
    options:
      name: monitoring-headlamp-tlsoptions
